--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="#" target="_blank">Ainda nao publicado</a>
               </h6>
-              <p>em breve um descricao do projeto</p>
+              <p>em breve uma descricao do projeto</p>
               <hr>
             </div>
             </div>
